# sentilex-ai-advocate

./: .env.production.example  .gitignore  CONTRIBUTING.md  README.md  TOKEN_REFRESH_SOLUTION.md  docker-compose.yml  requirements.txt  user account.txt
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Implemantaion_plan.md  README.md  agent.txt  app.py  config.py  ingest_pipeline.py  main.py  project_plan.md  pyproject.toml  requirements.txt  run.sh  setup.py  test_gemini.py  test_system.py  user passwords.txt  uv_instructions.md
backend/agents/: __init__.py  case_agent_graph.py  db_query_agent.py  llm_factory.py  memory.py  planner.py  rag_agent.py  reasoning.py  research.py  synthesizer.py  validation.py
backend/alembic/: README.md  env.py  reset.psql
backend/audit_logging/: __init__.py  audit.py
backend/auth/: __init__.py  dependencies.py
backend/chains/: __init__.py  main_chain.py
backend/data/: antigravity_analysis.json  antigravity_status.json  full_mcp_manifest.json  law-prompt.md  mcp_fast.json
backend/database/: __init__.py  assets.sql  config.py
backend/docs/: ARCHITECTURE.md  DATABASE_SETUP.md  GOOGLE_OAUTH_CHECKLIST.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION.md  LAWS.MD  MIGRATION_002_AUTH.md  MIGRATION_GUIDE.md  NOTIFICATION_SYSTEM.md  QUICKSTART.md  README.md  TECHNICAL_SPEC.md
backend/logging/: audit.py
backend/logs/: session_20260114_185744.jsonl  session_20260114_190004.jsonl  session_20260114_190139.jsonl  session_20260114_190358.jsonl  session_20260114_191520.jsonl  session_20260114_195956.jsonl  session_20260114_200356.jsonl  session_20260114_200702.jsonl  session_20260114_201120.jsonl  session_20260114_202038.jsonl  session_20260114_204002.jsonl  session_20260114_204514.jsonl
backend/mcp/: mcp.md  server.py
backend/mcp_client/: __init__.py  client.py
backend/mcp_server/: index_engine.py  ingest_pipeline.py  mcp.md  mcp_client.py  server.py
backend/models/: DocumentStorageService.py  __init__.py  active_session.py  admin.py  chat.py  chat_message.py  evidence.py  incident.py  incident_chat.py  lawyers.py  lawyerverificationaudit.py  login_attempt.py  notification.py  occurrence.py  session_chat.py  token_blacklist.py  user.py
backend/notebooks/: ingest_law.ipynb  rag_agent.ipynb
backend/routers/: admin_auth.py  auth.py  case_agent.py  chat.py  documents.py  evidence.py  google_oauth.py  incidents.py  lawbook.py  lawyer_verification.py  lawyers.py  legal_queries.py  notifications.py  occurrences.py  payments.py  stats.py
backend/schemas/: __init__.py  admin.py  auth.py  chat.py  evidence.py  incident.py  lawyers.py  messages.py  notification.py  oauth_profile.py  occurrence.py
backend/scripts/: create_admin.py  create_test_notifications.py  run_migration.py
backend/services/: chat_service.py  email_services.py  notification_service.py  (+3 more)
(+196 files in other folders)
