[project]
name = "sentilex-ai"
version = "0.1.0"
description = "Backend for the legally-compliant, forensically-secure AI system for Sri Lankan Law."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
]
