[project]
name = "sentilex-ai"
version = "0.1.0"
description = "Backend for the legally-compliant, forensically-secure AI system for Sri Lankan Law."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "fastmcp>=2.14.3",
    "ipykernel>=7.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "langchain-openai>=0.0.5",
    "langchain-pinecone>=0.2.13",
    "mcp[cli]>=1.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.27.0",
]
